# thesis-quantization

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  render.sh  test.py  test_windowed_audio_to_flame.ipynb  thesis_plots.ipynb  tmp.ipynb  tmp2.ipynb  tmp3.ipynb
assets/flame/: FLAME_masks.pkl
configs/: 0_no_flame_prior.yml  2dgs.yml  3dgs_quant.yml  6_with_2dgs.yml  code_talker_prediction.yml  code_talker_vq_vae.yml  direct_pred.yml  dynamic_gaussian_splatting.yml  dynamic_gaussian_splatting_color.yml  dynamic_gaussian_splatting_limited_data.yml  dynamic_gaussian_splatting_mono.yml  dynamic_gaussian_splatting_new_split.yml  gaussian_splatting.yml  lpips_test.yml  new_2dgs.yml  no_flame_window.yml  other_guy.yml  quantization.yml  rigged_gs.yml  single_frame.yml  windowed_audio2flame.yml
configs/ablations/: 0_no_flame_prior.yml  1_just_flame_prior.yml  2_with_per_gaussian.yml  3_with_color_mlp.yml  4_flame_inner_mouth.yml  5_open_mouth_oversampling.yml  6_revised_densification.yml  7_markov_chain_monte_carlo.yml
configs/ablations_final/: 1_just_flame_prior.yml  2_just_flame_prior_inner_mouth.yml  3_with_per_gaussian.yml  4_with_color_mlp.yml  5_oversample.yml  6_with_2dgs.yml  7_with_color_mlp_2dgs.yml  8_with_anisotropy.yml  9_with_anisotropy_overnight.yml
configs/ablations_lpips/: 0_no_flame_prior.yml  1_just_flame_prior.yml  2_with_per_gaussian.yml  3_with_color_mlp.yml  4_flame_inner_mouth.yml  5_open_mouth_oversampling.yml  6_revised_densification.yml  7_markov_chain_monte_carlo.yml
scripts/: render_ablations.sh  render_train.sh  render_validation.sh  start.sh
src/thesis/: __init__.py  compare_ablations.py  config.py  constants.py  dataset_statistics.py  evaluation.py  evaluation_runner.py  nerfstudio_camera_utils.py  render_custom_audio.py  render_vertex_video.py  render_video.py  render_video_legacy.py  thesis_plots.py  utils.py  video_utils.py
src/thesis/audio_feature_processing/: audio_cleaning.py  feature_analysis.ipynb  wav2vec.py
src/thesis/audio_to_flame/: __init__.py  flame_auto_encoder.py  quantization.py  windowed.py  windowed_quant.py
src/thesis/code_talker/: __init__.py  stage1_runner.py  stage2_runner.py  utils.py
src/thesis/data_management/: __init__.py  data_classes.py  datasets.py  point_cloud.py  primitives_loader.py  sequence_manager.py  test_data_management.ipynb  test_primitives.ipynb
src/thesis/deformation_field/: audio_latents.py  barycentric_sampling.py  barycentric_weighting.py  direct_prediction.py  flame_deformation.py  flame_knn.py  flame_vertex_latents.py  mesh_se3_extraction.py  per_gaussian_fine_tuning.py  per_gaussian_fine_tuning_2.py  rigging_params.py  spherical_interpolation_mlp.py
src/thesis/flame/: __init__.py  flame_head.py  flame_visualization.py  inverse_flame_mlp.py  lbs.py  legacy_test_flame.ipynb  pytorch3d_load_obj.py  test_flame.ipynb  test_flame_3d.ipynb  test_flame_projection.ipynb  vanilla_head.py  with_inner_mouth.py
src/thesis/gaussian_splatting/: camera_color_correction.py  dynamic_model.py  implicit_sequence_adjustment.py  initialize_splats.py  loss_computation.py  motion_only.py  video.py  (+13 more)
(+14 files in other folders)
